mType/tests/testFiles/import/error/library/importLibMissingLibrary.mt
// Test: import lib with non-existent library should error
import lib "ThisLibraryDoesNotExist12345";

print("Should not reach here");
